--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -21,7 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- <script src="https://code.jquery.com/jquery-3.6.4.slim.js" integrity="sha256-dWvV84T6BhzO4vG6gWhsWVKVoa4lVmLnpBOZh/CAHU4=" crossorigin="anonymous"></script> -->
 
@@ -117,7 +117,18 @@
           </li>
         </ul>
         <a type="button" role="button" href="{% url 'shopcart:shopcart_summary' %}" class="btn btn-outline-secondary">
-          <div class="d-inline-flex">1</div>
+
+          {% with total_qty=shopcart|length %}
+            <div id="shopping-cart-qty" class="d-inline-flex">
+              {% if total_qty > 0 %}
+                {{total_qty}}
+              {% else %}
+                0
+              {% endif %}
+            </div>
+          {% endwith %}
+
+
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart"
             viewBox="0 0 16 16">
             <path
