--- a/templates/shopcart/checkout.html
+++ b/templates/shopcart/checkout.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 
-{% block content %} 
+{% block content %}
 
 <!--Main layout-->
 <main class="mt-5 pt-4">
@@ -46,7 +46,8 @@
                     <!--Username-->
                     <div class="input-group mb-4">
                         <span class="input-group-text" id="basic-addon1">@</span>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                            aria-describedby="basic-addon1" />
                     </div>
 
                     <!--email-->
@@ -54,7 +55,8 @@
                         Email (optional)
                     </p>
                     <div class="form-outline mb-4">
-                         <input type="email" class="form-control" placeholder="youremail@example.com" aria-label="youremail@example.com" aria-describedby="basic-addon1" />
+                        <input type="email" class="form-control" placeholder="youremail@example.com"
+                            aria-label="youremail@example.com" aria-describedby="basic-addon1" />
                     </div>
 
                     <!--address-->
@@ -62,7 +64,8 @@
                         Address
                     </p>
                     <div class="form-outline mb-4">
-                        <input type="email" class="form-control" placeholder="1234 Main St" aria-label="1234 Main St" aria-describedby="basic-addon1" />
+                        <input type="email" class="form-control" placeholder="1234 Main St" aria-label="1234 Main St"
+                            aria-describedby="basic-addon1" />
                     </div>
 
                     <!--address-2-->
@@ -70,7 +73,8 @@
                         Address 2 (optional)
                     </p>
                     <div class="form-outline mb-4">
-                        <input type="email" class="form-control" placeholder="Apartment or suite" aria-label="Apartment or suite" aria-describedby="basic-addon1" />
+                        <input type="email" class="form-control" placeholder="Apartment or suite"
+                            aria-label="Apartment or suite" aria-describedby="basic-addon1" />
                     </div>
 
                     <!--Grid row-->
@@ -81,8 +85,9 @@
                                 Country
                             </p>
                             <div class="form-outline mb-4">
-                        <input type="email" class="form-control" placeholder="United States" aria-label="United States" aria-describedby="basic-addon1" />
-                    </div>
+                                <input type="email" class="form-control" placeholder="United States"
+                                    aria-label="United States" aria-describedby="basic-addon1" />
+                            </div>
                         </div>
                         <!--Grid column-->
 
@@ -92,8 +97,9 @@
                                 State
                             </p>
                             <div class="form-outline mb-4">
-                        <input type="email" class="form-control" placeholder="California" aria-label="California" aria-describedby="basic-addon1" />
-                    </div>
+                                <input type="email" class="form-control" placeholder="California"
+                                    aria-label="California" aria-describedby="basic-addon1" />
+                            </div>
                         </div>
                         <!--Grid column-->
 
@@ -103,7 +109,7 @@
                                 Zip
                             </p>
                             <div class="form-outline">
-                                <input type="text" class="form-control"/>
+                                <input type="text" class="form-control" />
                             </div>
                         </div>
                         <!--Grid column-->
@@ -113,28 +119,33 @@
                     <hr />
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                        <label class="form-check-label" for="flexCheckDefault">Shipping address is the same as my billing address</label>
+                        <label class="form-check-label" for="flexCheckDefault">Shipping address is the same as my
+                            billing address</label>
                     </div>
 
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                        <label class="form-check-label" for="flexCheckDefault">Save this information for next time</label>
+                        <label class="form-check-label" for="flexCheckDefault">Save this information for next
+                            time</label>
                     </div>
 
                     <hr />
 
                     <div class="my-3">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked />
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
+                                checked />
                             <label class="form-check-label" for="flexRadioDefault1"> Credit card </label>
                         </div>
 
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" />
+                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault2" />
                             <label class="form-check-label" for="flexRadioDefault2"> Debit card </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" />
+                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault3" />
                             <label class="form-check-label" for="flexRadioDefault3"> Paypal </label>
                         </div>
                     </div>
@@ -144,7 +155,7 @@
                                 Name on card
                             </p>
                             <div class="form-outline">
-                                <input type="text" class="form-control"/>
+                                <input type="text" class="form-control" />
                                 <div class="form-helper">Full name as displayed on card</div>
                             </div>
                         </div>
@@ -153,7 +164,7 @@
                                 Credit card number
                             </p>
                             <div class="form-outline">
-                                <input type="text" class="form-control" />                                
+                                <input type="text" class="form-control" />
                             </div>
                         </div>
                     </div>
@@ -164,7 +175,7 @@
                             </p>
                             <div class="form-outline">
                                 <input type="text" class="form-control" />
-                                
+
                             </div>
                         </div>
                         <div class="col-md-3 mb-3">
@@ -173,12 +184,12 @@
                             </p>
                             <div class="form-outline">
                                 <input type="text" class="form-control" />
-                                
+
                             </div>
                         </div>
                     </div>
-                    <hr class="mb-4" />                    
-                  <button class="btn btn-primary" type="button">Continue to checkout</button>
+                    <hr class="mb-4" />
+                    <button class="btn btn-primary" type="button">Continue to checkout</button>
                 </div>
                 <!--/.Card-->
             </div>
@@ -195,11 +206,15 @@
                 <!-- Cart -->
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between">
+                        
                         <div>
                             <h6 class="my-0">Product name</h6>
                             <small class="text-muted">Brief description</small>
+                            
                         </div>
                         <span class="text-muted">$12</span>
+
+                        
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
                         <div>
@@ -232,17 +247,12 @@
                 <!-- Promo code -->
                 <form class="card p-2">
                     <div class="input-group mb-3">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="Promo code"
-    aria-label="Promo code"
-    aria-describedby="button-addon2"
-  />
-  <button class="btn btn-primary" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-    redeem
-  </button>
-</div>
+                        <input type="text" class="form-control" placeholder="Promo code" aria-label="Promo code"
+                            aria-describedby="button-addon2" />
+                        <button class="btn btn-primary" type="button" id="button-addon2" data-mdb-ripple-color="dark">
+                            redeem
+                        </button>
+                    </div>
                 </form>
                 <!-- Promo code -->
             </div>
