--- a/templates/shopcart/shoppingCartSummary.html
+++ b/templates/shopcart/shoppingCartSummary.html
@@ -72,6 +72,7 @@
   <script>
     $(document).on('click','.delete-button',function(e){   // utilize the delete button class .delete-button
         e.preventDefault();
+        var prodid = $(this).data('index');
         $.ajax({
             type: 'POST',
             url: "{% url 'shopcart:shopcart_delete' %}",
@@ -81,6 +82,8 @@
                 action: 'post'
             },
             success: function (json) {
+                console.log(prodid)
+                $('.product-item[data-index="'+ prodid + '"]').remove();
         
             },
             error: function (xhr, errmsg, err) {}
