--- a/templates/shopcart/shoppingCartSummary.html
+++ b/templates/shopcart/shoppingCartSummary.html
@@ -6,63 +6,74 @@
 {% endblock title %}
 
 
-{% block content %} 
+{% block content %}
 
 <h1>Shopping Cart Summary Page</h1>
 
 <main class="pt-5">
     <div class="container">
-      {% for item in shopcart %}
+        {% for item in shopcart %}
         {% with product=item.product %}
-      <div data-index="{{product.id}}" class="row mb-4 border product-item">
-        <div class="col-md-3 col-lg-2 order-md-first bg-light">
-            {% for image in product.product_image.all %}
-                {% if image.is_feature %} 
-                <img class="img-fluid mx-auto d-block" width="120px" alt="Responsive image" src="{{ image.images.url }}"> 
+        <div data-index="{{product.id}}" class="row mb-4 border product-item">
+            <div class="col-md-3 col-lg-2 order-md-first bg-light">
+                {% for image in product.product_image.all %}
+                {% if image.is_feature %}
+                <img class="img-fluid mx-auto d-block" width="120px" alt="Responsive image"
+                    src="{{ image.images.url }}">
                 {% endif %}
-            {% endfor %}
-          
-        </div>
-        <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
-          <a href="{{ product.get_absolute_url }}" class="text-decoration-none text-reset">
-            <h1 class="h5 pt-2">{{ product.title }}</h1>
-          </a>
-          <div class="border">
-            <div class="col border-bottom">
-              <div class="row p-3">
-                <div class="col-6">Hardback Book</div>
-                <div class="col-6 text-end"><span class="h6 fw-bold">${{ item.total_price }}</span></div>
-              </div>
+                {% endfor %}
+
             </div>
-            <div class="col">
-              <div class="row p-3">
-                <div class="col-12">
-                    <label for="select">Qty</label>
-                    <input type="number" value="{{item.qty}}" class="form-control " id="select{{product.id}}" />
-                  <button type="button" id="update-button" data-index="{{product.id}}"
-                    class="btn btn-outline-secondary btn-sm update-button">
-                    Update
-                  </button>
-                  <button type="button" id="delete-button" data-index="{{product.id}}"
-                    class="btn btn-outline-secondary btn-sm delete-button">
-                    Delete
-                  </button>
+            <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
+                <a href="{{ product.get_absolute_url }}" class="text-decoration-none text-reset">
+                    <h1 class="h5 pt-2">{{ product.title }}</h1>
+                </a>
+                <div class="border">
+                    <div class="col border-bottom">
+                        <div class="row p-3">
+                            <div class="col-6">Hardback Book</div>
+                            <div class="col-6 text-end"><span class="h6 fw-bold">Unit Item Price ${{product.regular_price}}</span></div>
+
+                            <div class="col-6"></div>
+                            <div class="col-6 text-end"><span class="h6" >Quantity X </span><span class="h6" id="line-quantity-total{{product.id}}"> {{item.qty}}</span></div>
+                            <div class="col-6"></div>
+                            <div class="col-6 text-end"><span class="h6"> Item Total  $</span><span class="h6 " id="line-item-total{{product.id}}">{{item.total_price}}</span></div>
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row p-3">
+                            <div class="col-12">
+                                <label for="select">Qty</label>
+                                <input type="number" value="{{item.qty}}" class="form-control "
+                                    id="select{{product.id}}" />
+                                <button type="button" id="update-button" data-index="{{product.id}}"
+                                    class="btn btn-outline-secondary btn-sm update-button">
+                                    Update
+                                </button>
+                                <button type="button" id="delete-button" data-index="{{product.id}}"
+                                    class="btn btn-outline-secondary btn-sm delete-button">
+                                    Delete
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
         {% endwith %}
-      {% endfor %}
-      <div class="col-12 text-end">
-        <div class="h6 fw-bold">Sub Total: $<div id="subtotal" class="d-inline-flex">{{shopcart.get_total_price}}</div></div>
-      </div>
+        {% endfor %}
+        <div class="col-12 text-end">
+            <div class="h6 fw-bold">Sub Total: $<div id="subtotal" class="d-inline-flex">{{shopcart.get_total_price}}</div>
+            </div>
+        </div>
     </div>
-  </main>
-  
-  <script>
-    $(document).on('click','.delete-button',function(e){   // utilize the delete button class .delete-button
+</main>
+
+<script>
+
+    //delete item
+    $(document).on('click', '.delete-button', function (e) {   // utilize the delete button class .delete-button
         e.preventDefault();
         var prodid = $(this).data('index');
         $.ajax({
@@ -74,14 +85,16 @@
                 action: 'post'
             },
             success: function (json) {
-                $('.product-item[data-index="'+ prodid + '"]').remove();
+                $('.product-item[data-index="' + prodid + '"]').remove();
+                document.getElementById("subtotal").innerHTML = json.subtotal
+                document.getElementById("shopping-cart-qty").innerHTML = json.qty
             },
-            error: function (xhr, errmsg, err) {}
+            error: function (xhr, errmsg, err) { }
         });
     })
 
     //update item
-    $(document).on('click','.update-button',function(e){   // utilize the delete button class .delete-button
+    $(document).on('click', '.update-button', function (e) {   // utilize the delete button class .delete-button
         e.preventDefault();
         var prodid = $(this).data('index');   //Collect the product id when the button is pressed
         $.ajax({
@@ -89,14 +102,18 @@
             url: "{% url 'shopcart:shopcart_update' %}",
             data: {
                 productid: $(this).data('index'),       //Detects which delete button is selected on the summary page for that particular element    
-                productqty: $('#select'+ prodid).val(),
+                productqty: $('#select' + prodid).val(),
                 csrfmiddlewaretoken: "{{csrf_token}}",
                 action: 'post'
             },
-            success: function (json) {
- 
+            success: function (json) {   // This updates the basket button to update the value
+                document.getElementById("shopping-cart-qty").innerHTML = json.qty
+                document.getElementById("subtotal").innerHTML = json.subtotal
+                document.getElementById('line-quantity-total'+'prodid').innerHTML = json.qty 
+                document.getElementById('line-item-total'+'prodid').innerHTML = json.item_total 
+                console.log(json.item_total)
             },
-            error: function (xhr, errmsg, err) {}
+            error: function (xhr, errmsg, err) { }
         });
     })
 </script>
