--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,6 +4,8 @@
 
 
 
+
+
 <html lang="en">
 
 <head>
@@ -31,16 +33,18 @@
   <script src="{% static 'js/javascript.js' %}" defer></script>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+  <!-- Google Fonts  -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BEBAS+NEUE:bold" />
 </head>
 
 <body>
   <!-- Navbar BEGINS -->
 
-  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #AFC5F0">
+  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #B0d7d1; font-family:BEBAS NEUE,serif">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
+      <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">
+        <img src="{% static 'imgs/logo_prints/4x6 logo.jpg' %}" style="width: 100%; height:50px;"alt="">
+        </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -48,14 +52,14 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">HOME</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Products
+              PRODUCTS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'products:productIndexPage1' %}">Product Page1</a></li>
+              <li><a class="dropdown-item" href="{% url 'products:productIndexPage1' %}">PRODUCT PAGE1</a></li>
               <li><a class="dropdown-item" href="#">Link2</a></li>
               <li><a class="dropdown-item" href="#">Link2</a></li>
               <li>
@@ -72,8 +76,8 @@
               User : {{user.get_username}}
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
-              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'admin:index' %}">ADMIN</a></li>
+              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -89,7 +93,7 @@
               User : {{user.get_username}}
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -104,16 +108,16 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'users:userRegistration' %}">Register</a>
+            <a class="nav-link active" href="{% url 'users:userRegistration' %}">REGISTER</a>
           </li>
 
           {% endif %}
 
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">About</a>
+            <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">Contact</a>
+            <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">CONTACT</a>
           </li>
         </ul>
         <a type="button" role="button" href="{% url 'shopcart:shopcart_summary' %}" class="btn btn-outline-secondary">
@@ -151,7 +155,7 @@
 
   <!-- Footer BEGINS -->
 
-  <footer class="text-center text-white mt-1" style="background-color: #AFC5F0">
+  <footer class="text-center text-white mt-1" style="background-color: #B0d7d1">
 
     <!--Call to action-->
     <div class="pt-2 pb-1">
