20230325 0018 Completed initial Payment page with Stripe, Credit card element not displaying but initial code is installed, links working with updated fonts in Nav bar

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -34,13 +34,13 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <!-- Google Fonts  -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BEBAS+NEUE:bold" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <!-- Navbar BEGINS -->
 
-  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #B0d7d1; font-family:BEBAS NEUE,serif">
+  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #B0d7d1; font-family: 'Bebas Neue';">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">
         <img src="{% static 'imgs/logo_prints/4x6 logo.jpg' %}" style="width: 100%; height:50px;"alt="">
