--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,6 +24,8 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <!-- Load an Icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- <script src="https://code.jquery.com/jquery-3.6.4.slim.js" integrity="sha256-dWvV84T6BhzO4vG6gWhsWVKVoa4lVmLnpBOZh/CAHU4=" crossorigin="anonymous"></script> -->
 
@@ -32,121 +34,135 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <script src="{% static 'js/javascript.js' %}" defer></script>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" /> -->
   <!-- Google Fonts  -->
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <!-- Navbar BEGINS -->
-
-  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #B0d7d1; font-family: 'Bebas Neue';">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">
-        <img src="{% static 'imgs/logo_prints/4x6 logo.jpg' %}" style="width: 100%; height:50px;"alt="">
+  
+    <nav class="navbar sticky-top navbar-expand-sm "
+      style="background-color: #B0d7d1; font-family: 'Montserrat', sans-serif;  ">
+      <!-- container wrapper -->
+      <div class="container-fluid">
+        <!-- navbar brand -->
+        <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">
+          <img src="{% static 'imgs/logo_prints/HTJ-Logo-FINAL-no-background-01.png' %}"
+            style="width: 100%; height:50px;" alt="">
         </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">HOME</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              PRODUCTS
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'products:productIndexPage1' %}">PRODUCT PAGE1</a></li>
-              <li><a class="dropdown-item" href="#">Link2</a></li>
-              <li><a class="dropdown-item" href="#">Link2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+        <!-- toggle button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">
+          </span>
+        </button>
+        
+      
+        <div class="collapse navbar-collapse icon-menu" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">HOME</a>
+            </li>
+            <!-- Products Dropdown links -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                PRODUCTS
+              </a>
+              <ul class="dropdown-menu">    
+                <li><a class="dropdown-item" href="{% url 'products:product_all' %}">ALL</a></li>
+                {% for c in categories %}
+                <li>
+                  <a class="dropdown-item" href="">{{c.name|title}}</a>
+                </li>
+                {% endfor %}
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <!--------------------------USER OPTIONS---------------------------------------------->
+            {% if user.is_authenticated and user.is_superuser %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                USER : {{user.get_username}}
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'admin:index' %}">ADMIN</a></li>
+                <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+              </ul>
+            </li>
 
-          {% if user.is_authenticated and user.is_superuser %}
+            {% elif user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                User : {{user.get_username}}
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+              </ul>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'login' %}?next={{ request.path }}">LOGIN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'users:userRegistration' %}">REGISTER</a>
+            </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              User : {{user.get_username}}
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'admin:index' %}">ADMIN</a></li>
-              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
-            </ul>
-          </li>
+            {% endif %}
 
+            <!------------------------------------------------------------------------>
+            <!-- About link -->
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">ABOUT</a>
+            </li>
+            <!-- Contact link -->
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">CONTACT</a>
+            </li>
+          </ul>
 
-          {% elif user.is_authenticated %}
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              User : {{user.get_username}}
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">USER PROFILE</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
-            </ul>
-          </li>
-
-          {% else %}
-
-          <li class="nav-item">
-            <a class="nav-link active" href="{% url 'login' %}?next={{ request.path }}">LOGIN</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" href="{% url 'users:userRegistration' %}">REGISTER</a>
-          </li>
-
-          {% endif %}
-
-          <li class="nav-item">
-            <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">CONTACT</a>
-          </li>
-        </ul>
-        <a type="button" role="button" href="{% url 'shopcart:shopcart_summary' %}" class="btn btn-outline-secondary">
-
-          {% with total_qty=shopcart|length %}
-            <div id="shopping-cart-qty" class="d-inline-flex">
-              {% if total_qty > 0 %}
+          <!-- shop cart button -->
+            <a class="btn"  id="navbarTogglerCart" type="button"  href="{% url 'shopcart:shopcart_summary' %}" >
+              {% with total_qty=shopcart|length %}
+              <div id="shopping-cart-qty" class="d-inline-flex">
+                {% if total_qty > 0 %}
                 {{total_qty}}
-              {% else %}
+                {% else %}
                 0
-              {% endif %}
-            </div>
-          {% endwith %}
+                {% endif %}
+              </div>
+              {% endwith %}
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+              </svg>
+            </a>
+          
 
-
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart"
-            viewBox="0 0 16 16">
-            <path
-              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-          </svg>
-          Shop Cart
-        </a>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
       </div>
-    </div>
+  
   </nav>
+  </div>
   <!-- Navbar ENDS -->
 
 
