--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -16,7 +16,7 @@
       <section>
       <div class="text-center">
         <div class="row">
-    {% for product_item in all_products %}
+    {% for product_item in products %}
           <div class="col-lg-3 col-md-6 mb-4" >
             <div class="card" style="width: 100%; height:400px;" >
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
@@ -24,7 +24,7 @@
                 
                   {% for image in product_item.product_image.all %}
                     {% if image.is_feature %}
-                    <a href="{{ product.get_absolute_url }}">
+                    <a href="{% url 'products:productDetailsIndex' product_item.id %}">
                     <img src="{{image.images.url}}" class="w-100" alt="{{image.alt_text}}"/>
                     </a>
                     {% endif %}
