--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -24,7 +24,7 @@
                 
                   {% for image in product_item.product_image.all %}
                     {% if image.is_feature %}
-                    <a href="{{ product.get_absolute_url }}">
+                    <a href="{{ product_item.get_absolute_url }}">                  
                     <img src="{{image.images.url}}" class="w-100" alt="{{image.alt_text}}"/>
                     </a>
                     {% endif %}
