--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -74,7 +74,7 @@
                 <li><a class="dropdown-item" href="{% url 'products:product_all' %}">ALL</a></li>
                 {% for c in categories %}
                 <li>
-                  <a class="dropdown-item" href="">{{c.name|title}}</a>
+                  <a class="dropdown-item" href="{{c.get_absolute_url}}">{{c.name|title}}</a>
                 </li>
                 {% endfor %}
                 <li>
