20230326 0035 Fixed the hieght of the picture cards on the products and category page

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -39,7 +39,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class='d-flex flex-column min-vh-100'>
   <!-- Navbar BEGINS -->
   
     <nav class="navbar sticky-top navbar-expand-sm "
@@ -171,7 +171,7 @@
 
   <!-- Footer BEGINS -->
 
-  <footer class="text-center text-white mt-1" style="background-color: #B0d7d1">
+  <footer class="mt-auto text-center text-white " style="background-color: #B0d7d1">
 
     <!--Call to action-->
     <div class="pt-2 pb-1">
