--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -18,7 +18,7 @@
         <div class="row">
     {% for product_item in products %}
           <div class="col-lg-3 col-md-6 mb-4" >
-            <div class="card" style="width: 100%; height:400px;" >
+            <div class="card" style="width: 100%; height:300px;" >
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
                 
@@ -32,24 +32,21 @@
 
                 <a href="#!">
                   <div class="mask">
-                    <div class="d-flex justify-content-start align-items-end h-100">
-                      <h5><span class="badge bg-dark ms-2">NEW</span></h5>
-                    </div>
+                    
                   </div>
                   <div class="hover-overlay">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </div>
                 </a>
               </div>
-              <div class="card-body">
-                <a href="" class="text-reset">
-                  <h5 class="card-title mb-2"> {{ product_item.name }}</h5>
-                </a>
-                <a href="" class="text-reset ">
-                  <p>{{ product_item.description }}</p>
-                </a>
-                <h6 class="mb-3 price"> ${{ product_item.regular_price }}</h6>
-              </div>
+              <div class="card-text"> 
+                <!-- Title-->
+                 <h5 class="card-title"> {{ product_item.name }}</h5>          
+                 <!-- Description -->
+                 <p class="card-subtitle">{{ product_item.description }}</p>
+               <!-- Price -->
+               <h6 class="mb-1 price"> ${{ product_item.regular_price }}</h6>
+             </div>
             </div>
           </div>
     {% endfor %}
