--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -11,44 +11,39 @@
 
  <!--Main layout-->
  <main>
-    <div class="container">     
+    <div class="container ">     
     <!-- Products -->
       <section>
       <div class="text-center">
-        <div class="row">
+        <div class="row ">
     {% for product_item in all_products %}
-          <div class="col-lg-3 col-md-6 mb-4" >
-            <div class="card" style="width: 100%; height:400px;" >
+          <div class="col-lg-3 col-sm-3 mb-2" >
+            <div class="card"  style="width: 100%; height:300px;"  >
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
                 
                   {% for image in product_item.product_image.all %}
                     {% if image.is_feature %}
                     <a href="{{ product_item.get_absolute_url }}">                  
-                    <img src="{{image.images.url}}" class="w-100" alt="{{image.alt_text}}"/>
+                    <img src="{{image.images.url}}" class="w-100 card-img-top" alt="{{image.alt_text}}"/>
                     </a>
                     {% endif %}
                   {% endfor %}
 
                 <a href="#!">
-                  <div class="mask">
-                    <div class="d-flex justify-content-start align-items-end h-100">
-                      <h5><span class="badge bg-dark ms-2">NEW</span></h5>
-                    </div>
-                  </div>
+                  
                   <div class="hover-overlay">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </div>
                 </a>
               </div>
-              <div class="card-body">
-                <a href="" class="text-reset">
-                  <h5 class="card-title mb-2"> {{ product_item.name }}</h5>
-                </a>
-                <a href="" class="text-reset ">
-                  <p>{{ product_item.description }}</p>
-                </a>
-                <h6 class="mb-3 price"> ${{ product_item.regular_price }}</h6>
+              <div class="card-text"> 
+                 <!-- Title-->
+                  <h5 class="card-title"> {{ product_item.name }}</h5>          
+                  <!-- Description -->
+                  <p class="card-subtitle">{{ product_item.description }}</p>
+                <!-- Price -->
+                <h6 class="mb-1 price"> ${{ product_item.regular_price }}</h6>
               </div>
             </div>
           </div>
