20230326 1712 Loaded imaages and changes setting descriptions on display pages

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -34,7 +34,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <script src="{% static 'js/javascript.js' %}" defer></script>
   <!-- Font Awesome -->
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" /> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <!-- Google Fonts  -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
 </head>
