--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -41,9 +41,9 @@
               </div>
               <div class="card-text"> 
                 <!-- Title-->
-                 <h5 class="card-title"> {{ product_item.name }}</h5>          
+                 <h5 class="card-title"> {{ product_item.title }}</h5>          
                  <!-- Description -->
-                 <p class="card-subtitle">{{ product_item.description }}</p>
+                 <!-- <p class="card-subtitle">{{ product_item.description }}</p> -->
                <!-- Price -->
                <h6 class="mb-1 price"> ${{ product_item.regular_price }}</h6>
              </div>
