--- a/templates/products/productDetails.html
+++ b/templates/products/productDetails.html
@@ -42,7 +42,7 @@
 
                     <strong><p style="font-size: 20px;">Description</p></strong>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa sint voluptatibus! Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
+                    <p>{{productDetail.description}}</p>
 
                     <form class="d-flex justify-content-left">
                         <!-- Default input -->
@@ -55,6 +55,14 @@
                             <i class="fas fa-shopping-cart ms-1"></i>
                         </button>
                     </form>
+
+                    <!-- Product Type -->
+                    <div class="col-12">
+                        <label for="select">{{productDetail.product_type}} (IN WORK)</label>
+                        <input type="number" value="" class="form-control "
+                            id="select" />
+                    </div>
+
                 </div>
                 <!--Content-->
             </div>
@@ -84,7 +92,7 @@
             <div class="col-md-12 text-center">
                 <h4 class="my-4 h4">Additional information</h4>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit voluptates, quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
+                <p>{{productDetail.additional_description}}</p>
             </div>
             <!--Grid column-->
         </div>
