--- a/templates/shopcart/shoppingCartSummary.html
+++ b/templates/shopcart/shoppingCartSummary.html
@@ -31,7 +31,7 @@
                 <div class="border">
                     <div class="col border-bottom">
                         <div class="row p-3">
-                            <div class="col-6">Hardback Book</div>
+                            <div class="col-6">PLACEHOLDER</div>
                             <div class="col-6 text-end"><span class="h6 fw-bold">Unit Item Price ${{product.regular_price}}</span></div>
 
                             <div class="col-6"></div>
